# SwiftCmakeModulemapMVP

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
src/: another.swift  main.swift  module.modulemap
